--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,2 +1,3 @@
-Hello World !
-<router-outlet></router-outlet>
+<app-header></app-header>
+    <router-outlet></router-outlet>
+<app-footer></app-footer>
