edit sidebar and footer

--- a/Back/templates/components/sidebar.html.twig
+++ b/Back/templates/components/sidebar.html.twig
@@ -72,7 +72,7 @@
     <hr class="sidebar-divider">
     <!-- Heading -->
     <div class="sidebar-heading">
-        Addons
+        Developers
     </div>
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
@@ -120,7 +120,7 @@
     </li>
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="#">
             <i class="fas fa-fw fa-table"></i>
             <span>Tables</span>
         </a>
