--- a/Back/templates/components/sidebar.html.twig
+++ b/Back/templates/components/sidebar.html.twig
@@ -1,7 +1,12 @@
 <!-- Sidebar -->
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% if app.user.roles.roles is same as('admin') %}{{ path('admin') }}{% else %}{{ path('dev') }}{% endif %}">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" 
+    href="{% if app.user.roles.roles is same as('admin') %}
+            {{ path('admin') }}
+        {% else %}
+            {{ path('dev') }}
+        {% endif %}">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -53,8 +58,8 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
         aria-expanded="true" aria-controls="collapseUtilities">
-        <i class="fas fa-fw fa-wrench"></i>
-        <span>Utilities</span>
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>Utilities</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
         data-parent="#accordionSidebar">
