Edit Messagerie url

--- a/Back/templates/BASES/base.admin.html.twig
+++ b/Back/templates/BASES/base.admin.html.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>BackOffice - {% block title %}Dashboard{% endblock %}</title>
+        <title>BackOffice - {% block title %}{% if title is defined %}{{ title }}{% else %}Dashboard{% endif %}{% endblock %}</title>
         <!-- Custom fonts for this template-->
         <link href="{{ asset('vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
         <link
@@ -63,23 +63,23 @@
                 </div>
             </div>
         </div>
-        <!-- Bootstrap core JavaScript-->
-        <script src="{{asset('vendor/jquery/jquery.min.js')}}"></script>
-        <script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+            <!-- Bootstrap core JavaScript-->
+            <script src="{{asset('vendor/jquery/jquery.min.js')}}"></script>
+            <script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
 
-        <!-- Core plugin JavaScript-->
-        <script src="{{asset('vendor/jquery-easing/jquery.easing.min.js')}}"></script>
+            <!-- Core plugin JavaScript-->
+            <script src="{{asset('vendor/jquery-easing/jquery.easing.min.js')}}"></script>
 
-        <!-- Custom scripts for all pages-->
-        <script src="{{asset('js/sb-admin-2.min.js')}}"></script>
+            <!-- Custom scripts for all pages-->
+            <script src="{{asset('js/sb-admin-2.min.js')}}"></script>
+        {% block js %}
+            <!-- Page level plugins -->
+            <script src="{{asset('vendor/chart.js/Chart.js')}}"></script>
 
-        <!-- Page level plugins -->
-        <script src="{{asset('vendor/chart.js/Chart.min.js')}}"></script>
-
-        <!-- Page level custom scripts -->
-        <script src="{{asset('js/demo/chart-area-demo.js')}}"></script>
-        <script src="{{asset('js/demo/chart-pie-demo.js')}}"></script>
-
+            <!-- Page level custom scripts -->
+            <script src="{{asset('js/demo/chart-area-demo.js')}}"></script>
+            <script src="{{asset('js/demo/chart-pie-demo.js')}}"></script>
+        {% endblock %}
     </body>
 
 </html>
