--- a/Back/templates/components/topbar.html.twig
+++ b/Back/templates/components/topbar.html.twig
@@ -97,7 +97,7 @@
                     Messages
                 </h6>
                 {% for message in messages %}
-                    <a class="dropdown-item d-flex align-items-center" href="#">
+                    <a class="dropdown-item d-flex align-items-center" href="{{ path('message_read',{id:message.id}) }}">
                         <div class="mr-3">
                             <div class="icon-circle bg-info">
                                 <i class="fas fa-comment"></i>
@@ -108,7 +108,7 @@
                         </div>
                     </a>
                 {% endfor %}
-                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
+                <a class="dropdown-item text-center small text-gray-500" href="{{ path('messages') }}">Read More Messages</a>
             </div>
         </li>
         <div class="topbar-divider d-none d-sm-block"></div>
