--- a/Back/templates/components/sidebar.html.twig
+++ b/Back/templates/components/sidebar.html.twig
@@ -10,8 +10,8 @@
         <div class="sidebar-brand-icon rotate-n-15">
             <img src="{{ asset('img/favicons/favicon.png') }}" class="rounded-circle" style="width:90%;"/>
         </div>
-        <div class="sidebar-brand-text mx-3">
-            Back Office
+        <div class="sidebar-brand-text">
+            HHHL -Back Office
         </div>
     </a>
     <!-- Divider -->
