--- a/Back/templates/settings/index.html.twig
+++ b/Back/templates/settings/index.html.twig
@@ -1,19 +1,38 @@
 {% extends 'BASES/base.admin.html.twig' %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ title }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/patouillard/hophopHopDev/Back/src/Controller/SettingsController.php'|file_link(0) }}">src/Controller/SettingsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/patouillard/hophopHopDev/Back/templates/settings/index.html.twig'|file_link(0) }}">templates/settings/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="row">
+        <div class="col-12 text-center mb-5">
+            <h1><u>Paramètres</u> :</h1>
+        </div>
+        <div class="col-12">
+            <form>
+                <div class="form-group row">
+                    <label for="backgroundSidebar" class="col-5 offset-2 text-center col-form-label">Arrière plan Menu Gauche :</label>
+                    <div class="col-1">
+                        <input type="text" name="backgroundSidebar" class=" text-center form-control" value="{{ setting.backgroundMenuGauche }}" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="backgroundTopMenu" class="col-5 offset-2 text-center col-form-label">Arrière plan Menu Haut :</label>
+                    <div class="col-1">
+                        <input type="text" name="backgroundTopMenu" class="text-center form-control" value="{{ setting.backgroundMenuHaut }}" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="backgroundTopMenu" class="col-5 offset-2 text-center col-form-label">Couleur du texte de corps de page :</label>
+                    <div class="col-1">
+                        <input type="text" name="backgroundTopMenu" class="text-center form-control" value="{{ setting.colorTextBody }}" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="backgroundTopMenu" class="col-5 offset-2 text-center col-form-label">Arrière plan du corps de page :</label>
+                    <div class="col-1">
+                        <input type="text" name="backgroundTopMenu" class="text-center form-control" value="{{ setting.backgroundBody }}" />
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
 {% block js %}{% endblock %}
