--- a/Back/templates/components/topbar.html.twig
+++ b/Back/templates/components/topbar.html.twig
@@ -79,7 +79,7 @@
                         </div>
                     </a>
                 {% endfor %}
-                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                <a class="dropdown-item text-center small text-gray-500" href="#">Voir toutes les Alertes</a>
             </div>
         </li>
         <!-- Nav Item - Messages -->
@@ -108,7 +108,8 @@
                         </div>
                     </a>
                 {% endfor %}
-                <a class="dropdown-item text-center small text-gray-500" href="{{ path('messages') }}">Read More Messages</a>
+                <a class="dropdown-item text-center small text-gray-500" href="{{ path('message_create') }}">Créer un Message</a>
+                <a class="dropdown-item text-center small text-gray-500" href="{{ path('messages') }}">Lire plusieurs Messages</a>
             </div>
         </li>
         <div class="topbar-divider d-none d-sm-block"></div>
@@ -116,9 +117,9 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ app.user.username }}</span>
                 <img class="img-profile rounded-circle"
-                    src="{{ asset('img/undraw_profile.svg') }}">
+                    src="{% if app.user.profil is null %}{{ asset('img/undraw_profile.svg') }}{% else %}{{ app.user.profil }}{% endif %}">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -126,10 +127,6 @@
                 <a class="dropdown-item" href="#">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
