--- a/Back/templates/components/website/area.html.twig
+++ b/Back/templates/components/website/area.html.twig
@@ -4,7 +4,7 @@
         <!-- Card Header - Dropdown -->
         <div
             class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-primary">Revenu mensuel</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Nombre d'utilisateurs</h6>
             <div class="dropdown no-arrow">
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
             </div>
